--- a/settings.gradle
+++ b/settings.gradle
@@ -4,14 +4,9 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
+    includeBuild 'toolchain/config'
 }
-dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
+
 rootProject.name = "hubber"
 includeBuild('toolchain/generator')
 includeBuild('toolchain/dependencies')
