--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,14 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'com.google.android.material:material:1.5.0'
+    for (domain in file("../domain").listFiles()) {
+        for (layer in domain.listFiles()) {
+            for (module in layer.listFiles()) {
+                def buildGradle = new File(module, "build.gradle")
+                if (buildGradle.exists()) {
+                    implementation project(":domain:${domain.name}:${layer.name}:${module.name}")
+                }
+            }
+        }
+    }
 }
