--- a/toolchain/dependencies/build.gradle
+++ b/toolchain/dependencies/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java-gradle-plugin'
-    id 'org.jetbrains.kotlin.jvm' version '1.8.21'
+    id 'org.jetbrains.kotlin.jvm' version '1.8.20'
     id 'io.gitlab.arturbosch.detekt' version '1.22.0'
     id 'net.meilcli.hubber.toolchain.generator.dependencies'
 }
@@ -29,14 +29,24 @@ dependencies {
     library 'toolchain-detekt-rule:toolchain-detekt-rule'
 
     library 'com.android.tools.build:gradle:8.0.0'
-    library 'androidx.appcompat:appcompat:1.5.1'
+    library 'androidx.appcompat:appcompat:1.6.1'
+    library 'androidx.activity:activity-compose:1.7.1'
+    library 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
+    library 'androidx.compose:compose-bom:2023.04.01'
+    library 'androidx.compose.foundation:foundation'
+    library 'androidx.compose.material3:material3'
+    library 'androidx.compose.ui:ui'
+    library 'androidx.compose.ui:ui-tooling-preview'
+    library 'androidx.compose.ui:ui-tooling'
+    library 'androidx.compose.ui:ui-test-junit4'
+    library 'androidx.compose.ui:ui-test-manifest'
 
     library 'junit:junit:4.13.2'
 
     library 'io.mockk:mockk:1.13.5'
 
-    library 'androidx.test.ext:junit:1.1.4'
-    library 'androidx.test.espresso:espresso-core:3.5.0'
+    library 'androidx.test.ext:junit:1.1.5'
+    library 'androidx.test.espresso:espresso-core:3.5.1'
 }
 
 gradlePlugin {
