add navigation compose

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.kapt'
     id 'com.google.dagger.hilt.android'
+    id 'com.google.devtools.ksp'
     id 'io.gitlab.arturbosch.detekt'
     id 'net.meilcli.hubber.toolchain.config.detekt'
     id 'net.meilcli.hubber.toolchain.config.android-application'
