--- a/domain/core/data/main/build.gradle
+++ b/domain/core/data/main/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.kapt'
     id 'com.google.dagger.hilt.android'
+    id 'com.google.devtools.ksp'
     id 'io.gitlab.arturbosch.detekt'
     id 'net.meilcli.hubber.toolchain.config.android-library'
     id 'net.meilcli.hubber.toolchain.config.detekt'
