--- a/domain/core/ui/main/build.gradle
+++ b/domain/core/ui/main/build.gradle
@@ -1,13 +1,18 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.kapt'
     id 'com.google.dagger.hilt.android'
+    id 'com.google.devtools.ksp'
     id 'io.gitlab.arturbosch.detekt'
+    id 'net.meilcli.hubber.toolchain.dependencies'
     id 'net.meilcli.hubber.toolchain.config.android-library'
     id 'net.meilcli.hubber.toolchain.config.detekt'
     id 'net.meilcli.hubber.toolchain.config.dagger'
+    id 'net.meilcli.hubber.toolchain.config.ksp'
 }
+
+import net.meilcli.hubber.config.Dependencies
 
 android {
     namespace 'net.meilcli.hubber.core.ui.main'
@@ -15,4 +20,7 @@ android {
 
 dependencies {
     implementation project(':domain:core:data:main')
+    implementation Dependencies.AndroidxNavigation.NavigationCompose
+    implementation Dependencies.IoGithubRaamcostaComposeDestinations.Core
+    ksp Dependencies.IoGithubRaamcostaComposeDestinations.Ksp
 }
