--- a/toolchain/dependencies/build.gradle
+++ b/toolchain/dependencies/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     library 'androidx.appcompat:appcompat:1.6.1'
     library 'androidx.activity:activity-compose:1.7.1'
     library 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
+    library 'androidx.navigation:navigation-compose:2.5.3'
     library 'androidx.compose:compose-bom:2023.04.01'
     library 'androidx.compose.foundation:foundation'
     library 'androidx.compose.material3:material3'
@@ -41,8 +42,11 @@ dependencies {
     library 'androidx.compose.ui:ui-test-junit4'
     library 'androidx.compose.ui:ui-test-manifest'
 
-    library 'com.google.dagger:hilt-android:2.44'
-    library 'com.google.dagger:hilt-compiler:2.44'
+    library 'com.google.dagger:hilt-android:2.46'
+    library 'com.google.dagger:hilt-compiler:2.46'
+
+    library 'io.github.raamcosta.compose-destinations:core:1.8.41-beta'
+    library 'io.github.raamcosta.compose-destinations:ksp:1.8.41-beta'
 
     library 'junit:junit:4.13.2'
 
