--- a/domain/core/data/main/build.gradle
+++ b/domain/core/data/main/build.gradle
@@ -1,15 +1,4 @@
 plugins {
-    id 'com.android.library'
-    id 'org.jetbrains.kotlin.android'
-    id 'org.jetbrains.kotlin.kapt'
-    id 'com.google.dagger.hilt.android'
-    id 'com.google.devtools.ksp'
-    id 'io.gitlab.arturbosch.detekt'
-    id 'net.meilcli.hubber.toolchain.config.android-library'
-    id 'net.meilcli.hubber.toolchain.config.detekt'
-    id 'net.meilcli.hubber.toolchain.config.dagger'
-}
-
-android {
-    namespace 'net.meilcli.hubber.core.data.main'
+    id 'net.meilcli.hubber.toolchain.dependencies'
+    id 'net.meilcli.hubber.toolchain.config.module.core.data'
 }
