--- a/toolchain/dependencies/build.gradle
+++ b/toolchain/dependencies/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     library 'androidx.compose:compose-bom:2023.04.01'
     library 'androidx.compose.foundation:foundation'
     library 'androidx.compose.material3:material3'
+    library 'androidx.compose.runtime:runtime'
     library 'androidx.compose.ui:ui'
     library 'androidx.compose.ui:ui-tooling-preview'
     library 'androidx.compose.ui:ui-tooling'
