--- a/toolchain/dependencies/build.gradle
+++ b/toolchain/dependencies/build.gradle
@@ -21,6 +21,9 @@ dependencies {
     library 'org.jetbrains.kotlin:kotlin-gradle-plugin'
     library 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     library 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0'
+    library 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.2'
+    library 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.2'
+    library 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.2'
 
     library 'com.google.devtools.ksp:symbol-processing-gradle-plugin:1.8.20-1.0.11'
 
@@ -35,6 +38,11 @@ dependencies {
     library 'androidx.activity:activity-compose:1.7.1'
     library 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
     library 'androidx.navigation:navigation-compose:2.5.3'
+    library 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    library 'androidx.room:room-runtime:2.5.1'
+    library 'androidx.room:room-compiler:2.5.1'
+    library 'androidx.room:room-testing:2.5.1'
+    library 'androidx.datastore:datastore-preferences:1.0.0'
     library 'androidx.compose:compose-bom:2023.04.01'
     library 'androidx.compose.foundation:foundation'
     library 'androidx.compose.material3:material3'
@@ -46,7 +54,9 @@ dependencies {
     library 'androidx.compose.ui:ui-test-manifest'
 
     library 'com.google.dagger:hilt-android:2.46'
-    library 'com.google.dagger:hilt-compiler:2.46'
+    library 'com.google.dagger:hilt-android-compiler:2.46'
+    library 'com.google.dagger:hilt-android-testing:2.46'
+    library 'com.google.truth:truth:1.1.4'
 
     library 'io.github.raamcosta.compose-destinations:core:1.8.41-beta'
     library 'io.github.raamcosta.compose-destinations:ksp:1.8.41-beta'
