--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,14 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
     id 'org.jetbrains.kotlin.kapt' version '1.8.20' apply false
     id 'org.jetbrains.kotlin.plugin.parcelize' version '1.8.20' apply false
+    id 'org.jetbrains.dokka' version '1.8.20'
     id 'com.google.dagger.hilt.android' version '2.46' apply false
     id 'com.google.devtools.ksp' version '1.8.20-1.0.11' apply false
     id 'io.gitlab.arturbosch.detekt' version '1.22.0' apply false
+}
+
+repositories {
+    mavenCentral()
 }
 
 tasks.register("detekt", ReportMergeTask) { mergeTask ->
