--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,7 @@ rootProject.name = "hubber"
 includeBuild('toolchain/generator')
 includeBuild('toolchain/dependencies')
 includeBuild('toolchain/detekt-rule')
+includeBuild('toolchain/dokka-plugin')
 includeBuild('toolchain/config')
 
 include ':app'
