--- a/toolchain/dokka-plugin/build.gradle
+++ b/toolchain/dokka-plugin/build.gradle
@@ -24,12 +24,25 @@ dependencies {
     testImplementation Dependencies.OrgJetbrainsDokka.DokkaBase
     testImplementation Dependencies.OrgJetbrainsDokka.DokkaBaseTestUtils
     testImplementation Dependencies.OrgJetbrainsDokka.DokkaTestApi
+
+    detektPlugins Dependencies.IoGitlabArturboschDetekt.DetektFormatting
+}
+
+def findDetektYmlDirectory() {
+    def current = buildDir
+    while (current.parentFile != null) {
+        if (new File(current, "detekt.yml").exists()) {
+            return current
+        }
+        current = current.parentFile
+    }
+    return current
 }
 
 detekt {
     buildUponDefaultConfig = true
-    config = files("../../detekt.yml")
-    basePath = file("../../")
+    config = files("${findDetektYmlDirectory()}/detekt.yml")
+    basePath = findDetektYmlDirectory()
 }
 
 tasks.named("detekt").configure {
