--- a/toolchain/detekt-rule/build.gradle
+++ b/toolchain/detekt-rule/build.gradle
@@ -24,10 +24,21 @@ dependencies {
     detektPlugins Dependencies.IoGitlabArturboschDetekt.DetektFormatting
 }
 
+def findDetektYmlDirectory() {
+    def current = buildDir
+    while (current.parentFile != null) {
+        if (new File(current, "detekt.yml").exists()) {
+            return current
+        }
+        current = current.parentFile
+    }
+    return current
+}
+
 detekt {
     buildUponDefaultConfig = true
-    config = files("../../detekt.yml")
-    basePath = file("../../")
+    config = files("${findDetektYmlDirectory()}/detekt.yml")
+    basePath = findDetektYmlDirectory()
 }
 
 tasks.named("detekt").configure {
