--- a/toolchain/detekt-rule/src/main/resources/config/config.yml
+++ b/toolchain/detekt-rule/src/main/resources/config/config.yml
@@ -4,3 +4,5 @@ hubber:
     interfacePattern: '^I[A-Z][A-Za-z0-9]*'
   TypeParameterNaming:
     active: true
+  InternalVisibility:
+    active: true
