--- a/toolchain/dependencies/build.gradle
+++ b/toolchain/dependencies/build.gradle
@@ -71,6 +71,8 @@ dependencies {
 
     library 'io.mockk:mockk:1.13.5'
 
+    library 'org.robolectric:robolectric:4.9'
+
     library 'androidx.test.ext:junit:1.1.5'
     library 'androidx.test.espresso:espresso-core:3.5.1'
 }
